2008-03-19  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/tc-s390.c (md_parse_option): z10 option added.

2008-03-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* aclocal.m4: Regenerate.
	* configure: Likewise.
	* Makefile.in: Likewise.
	* doc/Makefile.in: Likewise.

2008-03-17  Adrian Bunk  <bunk@stusta.de>

	PR 5946
	* config/tc-hppa.c (is_same_frag): Delete.

2008-03-14  Sterling Augustine  <sterling@tensilica.com>
	
	* config/tc-xtensa.h (xtensa_relax_statesE): Update comment for
	RELAX_LOOP_END_ADD_NOP.
	
2008-03-13  Evandro Menezes  <evandro@yahoo.com>

	PR gas/5895
	* read.c (s_mexit): Warn if attempting to exit a macro when not
	inside a macro definition.

2008-03-13  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* configure: Regenerate.

2008-03-09  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_cpu_option_table): Add cortex-a9.
	* doc/c-arm.texi: Add cortex-a9.

2008-03-09  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (fpu_vfp_ext_d32): New vairable.
	(parse_vfp_reg_list, encode_arm_vfp_reg): Use it.
	(arm_option_cpu_value): Add vfpv3-d16, vfpv2 and vfpv3.
	(aeabi_set_public_attributes): Handle Tag_VFP_arch=VFPV3-D16.
	* doc/c-arm.texi: Document new ARM FPU variants.

2008-03-07  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (md_apply_fix): Use correct offset range.

2008-03-07  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_setup_opcodes): Tidy.  Add code to test
	for strict ordering of powerpc_opcodes, but disable for now.

2008-03-04  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_ext_barrier, arm_ext_msr): New.
	(arm_ext_v7m): Rename...
	(arm_ext_m): ... to this.  Include v6-M.
	(do_t_add_sub): Allow narrow low-reg non flag setting adds.
	(do_t_mrs, do_t_msr, aeabi_set_public_attributes): Use arm_ext_m.
	(md_assemble): Allow wide msr instructions.
	(insns): Add classifications for v6-m instructions.