@@ -1,0 +1,15 @@
+	CC = A0 == A0;
+	CC = A1 == A1;
+	CC = A1 == A0;
+	cc = A0 < a0;
+	cc = A1 < a1;
+	cc = A1 < a0;
+	cc = a0 <= a0;
+	cc = a1 <= a1;
+	cc = a1 <= a0;
+	CC = R0 == P0;
+	CC = R0 < P0;
+	CC = R0 <= P0;
+	CC = P0 == R0;
+	CC = P0 < R0;
+	CC = P0 <= R0;
